--- a/package.json
+++ b/package.json
@@ -4,14 +4,17 @@
   "private": true,
   "dependencies": {
     "@mapbox/mapbox-gl-draw": "^1.2.0",
+    "@mapbox/mapbox-gl-draw-static-mode": "^1.0.1",
     "@material-ui/core": "^4.11.2",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.57",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "fontsource-roboto": "^4.0.0",
     "mapbox-gl": "^2.0.1",
     "react": "^17.0.1",
+    "react-color": "^2.19.3",
     "react-dom": "^17.0.1",
     "react-mapbox-gl": "^5.1.1",
     "react-mapbox-gl-draw": "^2.0.4",
